--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
     "test": "react-scripts test"
   },
   "dependencies": {
+    "@capacitor/android": "4.0.1",
+    "@capacitor/app": "^4.0.1",
+    "@capacitor/core": "4.0.1",
+    "@capacitor/haptics": "^4.0.1",
+    "@capacitor/ios": "4.0.1",
+    "@capacitor/keyboard": "^4.0.1",
+    "@capacitor/splash-screen": "^4.0.1",
+    "@capacitor/status-bar": "^4.0.1",
     "@ionic/react": "^5.6.0",
     "dayjs": "^1.11.4",
     "ionicons": "^5.5.0",
@@ -16,6 +24,7 @@
     "recharts": "^2.1.13"
   },
   "devDependencies": {
+    "@capacitor/cli": "4.0.1",
     "react-scripts": "4.0.3"
   },
   "eslintConfig": {
